refactor(pipes): rename modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
+dist/
 
 *~
 *.sw[mnpcod]
@@ -28,6 +29,8 @@ plugins/
 plugins/android.json
 plugins/ios.json
 $RECYCLE.BIN/
+
+
 
 .DS_Store
 Thumbs.db
