chore(lib): add prod configs

--- a/angular.json
+++ b/angular.json
@@ -127,13 +127,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         },
         "ionic-cordova-build": {
@@ -185,9 +180,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -203,6 +196,11 @@
           "options": {
             "tsConfig": "projects/async-pipes/tsconfig.lib.json",
             "project": "projects/async-pipes/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/async-pipes/ng-package.prod.json"
+            }
           }
         },
         "test": {
@@ -220,9 +218,7 @@
               "projects/async-pipes/tsconfig.lib.json",
               "projects/async-pipes/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
