--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build async-pipes --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
